[metadata]
name = dullahan
version = 0.0.1
author = InfinusA
author_email = test@email.com
description = System-tray only media player
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
    # Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find_namespace:
python_requires = >=3.6
install_requires =
    PySide2
    mpris-server
    python-mpd2
    mutagen


[options.package_data]
dullahan =
    *.png

[options.packages.find]
where =

[options.entry_points]
console_scripts =
        dullahan = dullahan:exec
